--- a/core/classes/chunkdb.html
+++ b/core/classes/chunkdb.html
@@ -121,7 +121,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L37">ChunkDB.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L26">ChunkDB.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -143,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">active<wbr>Transactions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Accessor</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L36">ChunkDB.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L25">ChunkDB.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -153,7 +153,7 @@
 					<div class="tsd-signature tsd-kind-icon">collections<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L30">ChunkDB.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L19">ChunkDB.ts:19</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">ready<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L33">ChunkDB.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L22">ChunkDB.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">spaces<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Spaces</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L31">ChunkDB.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L20">ChunkDB.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -191,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">storage<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ChunkStorage</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L29">ChunkDB.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L18">ChunkDB.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -201,7 +201,7 @@
 					<div class="tsd-signature tsd-kind-icon">storage<wbr>Driver<span class="tsd-signature-symbol">:</span> <a href="../interfaces/istoragedriver.html" class="tsd-signature-type" data-tsd-kind="Interface">IStorageDriver</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L35">ChunkDB.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L24">ChunkDB.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -211,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">store<wbr>Subscriptions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L37">ChunkDB.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L26">ChunkDB.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -228,7 +228,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L182">ChunkDB.ts:182</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L176">ChunkDB.ts:176</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -260,13 +260,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L99">ChunkDB.ts:99</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L87">ChunkDB.ts:87</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -289,7 +289,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L51">ChunkDB.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L39">ChunkDB.ts:39</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="chunkdb.html" class="tsd-signature-type" data-tsd-kind="Class">ChunkDB</a><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -300,13 +300,13 @@
 					<a name="getflatchain" class="tsd-anchor"></a>
 					<h3>get<wbr>Flat<wbr>Chain</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Flat<wbr>Chain<span class="tsd-signature-symbol">(</span>head<span class="tsd-signature-symbol">: </span><a href="../modules.html#chunkid" class="tsd-signature-type" data-tsd-kind="Type alias">ChunkID</a>, maxDepth<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="abstractchunk.html" class="tsd-signature-type" data-tsd-kind="Class">AbstractChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Flat<wbr>Chain<span class="tsd-signature-symbol">(</span>head<span class="tsd-signature-symbol">: </span><a href="../modules.html#chunkid" class="tsd-signature-type" data-tsd-kind="Type alias">ChunkID</a>, maxDepth<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="abstractchunk.html" class="tsd-signature-type" data-tsd-kind="Class">AbstractChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L154">ChunkDB.ts:154</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L149">ChunkDB.ts:149</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -318,7 +318,7 @@
 									<h5>maxDepth: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 3</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="abstractchunk.html" class="tsd-signature-type" data-tsd-kind="Class">AbstractChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="abstractchunk.html" class="tsd-signature-type" data-tsd-kind="Class">AbstractChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -332,7 +332,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L106">ChunkDB.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L93">ChunkDB.ts:93</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -355,7 +355,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L87">ChunkDB.ts:87</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L78">ChunkDB.ts:78</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -384,7 +384,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L63">ChunkDB.ts:63</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L54">ChunkDB.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -422,7 +422,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L71">ChunkDB.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L62">ChunkDB.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -476,7 +476,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L131">ChunkDB.ts:131</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L118">ChunkDB.ts:118</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -507,7 +507,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/ChunkDB.ts#L132">ChunkDB.ts:132</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/ChunkDB.ts#L119">ChunkDB.ts:119</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
