--- a/core/classes/collectionconfig.html
+++ b/core/classes/collectionconfig.html
@@ -113,13 +113,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/common.types.ts#L57">common.types.ts:57</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/common.types.ts#L60">common.types.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span> = <span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span> = <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">factory<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">T</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/common.types.ts#L57">common.types.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/common.types.ts#L60">common.types.ts:60</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -175,7 +175,7 @@
 					<div class="tsd-signature tsd-kind-icon">indexed<wbr>Fields<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">keyof </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/common.types.ts#L55">common.types.ts:55</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/common.types.ts#L58">common.types.ts:58</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -192,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">priority<span class="tsd-signature-symbol">:</span> <a href="../enums/priority.html" class="tsd-signature-type" data-tsd-kind="Enumeration">Priority</a><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/common.types.ts#L56">common.types.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/common.types.ts#L59">common.types.ts:59</a></li>
 						</ul>
 					</aside>
 				</section>
