--- a/core/classes/updatechunk.html
+++ b/core/classes/updatechunk.html
@@ -120,26 +120,26 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagProtected">Protected</span> constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-has-type-parameter tsd-is-inherited tsd-is-protected">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Update<wbr>Chunk&lt;T&gt;<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="updatechunk.html" class="tsd-signature-type" data-tsd-kind="Class">UpdateChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Update<wbr>Chunk&lt;T&gt;<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="updatechunk.html" class="tsd-signature-type" data-tsd-kind="Class">UpdateChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L31">chunks/AbstractChunk.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L31">chunks/AbstractChunk.ts:31</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span> = <span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span> = <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>data: <a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>data: <a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="updatechunk.html" class="tsd-signature-type" data-tsd-kind="Class">UpdateChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -156,7 +156,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#data">data</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L28">chunks/AbstractChunk.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L28">chunks/AbstractChunk.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -173,7 +173,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#id">id</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L21">chunks/AbstractChunk.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L21">chunks/AbstractChunk.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#parents">parents</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L29">chunks/AbstractChunk.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L29">chunks/AbstractChunk.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -195,7 +195,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#size">size</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L30">chunks/AbstractChunk.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L30">chunks/AbstractChunk.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -206,7 +206,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#sizes">sizes</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L31">chunks/AbstractChunk.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L31">chunks/AbstractChunk.ts:31</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -225,7 +225,7 @@
 					<aside class="tsd-sources">
 						<p>Overrides <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#type">type</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/UpdateChunk.ts#L6">chunks/UpdateChunk.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/UpdateChunk.ts#L6">chunks/UpdateChunk.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -236,17 +236,17 @@
 					<a name="togenericchunk" class="tsd-anchor"></a>
 					<h3>to<wbr>Generic<wbr>Chunk</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">to<wbr>Generic<wbr>Chunk<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">to<wbr>Generic<wbr>Chunk<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="abstractchunk.html">AbstractChunk</a>.<a href="abstractchunk.html#togenericchunk">toGenericChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/core/src/chunks/AbstractChunk.ts#L42">chunks/AbstractChunk.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/core/src/chunks/AbstractChunk.ts#L42">chunks/AbstractChunk.ts:42</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
