--- a/idb/classes/indexeddbdriver.html
+++ b/idb/classes/indexeddbdriver.html
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L25">index.ts:25</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L19">index.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -154,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">db<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IDBDatabase</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L23">index.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L17">index.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">indexedDB<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IDBFactory</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L22">index.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L16">index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L24">index.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L18">index.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -191,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">spaces<wbr>Collection<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L25">index.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L19">index.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -208,7 +208,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L116">index.ts:116</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L114">index.ts:114</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -229,7 +229,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.connect</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L36">index.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L33">index.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -240,14 +240,14 @@
 					<a name="loadchunk" class="tsd-anchor"></a>
 					<h3>load<wbr>Chunk</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">load<wbr>Chunk<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ChunkID</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">load<wbr>Chunk<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ChunkID</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.loadChunk</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L55">index.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L60">index.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -256,7 +256,7 @@
 									<h5>id: <span class="tsd-signature-type">ChunkID</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -271,7 +271,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.loadSpace</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L87">index.ts:87</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L89">index.ts:89</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -295,7 +295,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.markDraftChunkAsUnused</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L82">index.ts:82</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L84">index.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -312,23 +312,23 @@
 					<a name="savechunk" class="tsd-anchor"></a>
 					<h3>save<wbr>Chunk</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">save<wbr>Chunk<span class="tsd-signature-symbol">(</span>chunk<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">save<wbr>Chunk<span class="tsd-signature-symbol">(</span>chunk<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.saveChunk</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L68">index.ts:68</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L71">index.ts:71</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>chunk: <span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>chunk: <span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">IGenericChunk</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -343,7 +343,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.saveSpace</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/2cfde04/packages/idb/src/index.ts#L100">index.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/e9f250b/packages/idb/src/index.ts#L100">index.ts:100</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
